--- a/app/src/main/res/layout/tar_option_dialog.xml
+++ b/app/src/main/res/layout/tar_option_dialog.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -15,157 +16,177 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:clickable="true"
     android:background="@color/md_theme_surface"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:clickable="true"
+    android:fitsSystemWindows="true">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="11dp">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/buttonContainer">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="@string/compress_tar"/>
-
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/progressIndicator"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:visibility="gone"
-            android:indeterminate="true"/>
+            android:orientation="vertical"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="10dp">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/toggleFileViewBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cornerRadius="10dp"
-            style="@style/Widget.Material3.Button.TonalButton"
-            android:text="@string/show_hide_selected_files" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/compress_tar"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/filePathsRv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:visibility="gone" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxCornerRadiusTopStart="10dp"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusBottomStart="10dp"
-            app:boxCornerRadiusBottomEnd="10dp"
-            android:layout_margin="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/archiveNameEditText"
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/progressIndicator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
-                android:hint="@string/enter_name_of_archive_optional"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_margin="5dp"
+                android:visibility="gone"
+                android:indeterminate="true"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:textStyle="bold"
-            android:text="@string/compression_method"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/toggleFileViewBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:cornerRadius="10dp"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:text="@string/show_hide_selected_files" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/compressionChipGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:singleSelection="true">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/filePathsRv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:visibility="gone" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTar"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusBottomEnd="10dp"
+                android:layout_margin="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/archiveNameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+                    android:hint="@string/enter_name_of_archive_optional"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="@string/no_compression"
-                android:checked="true"/>
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:textStyle="bold"
+                android:text="@string/compression_method"/>
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTarBz2"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/compressionChipGroup"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="tar.bz2"/>
+                android:layout_margin="5dp"
+                app:singleSelection="true">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTarGz"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="tar.gz"/>
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTar"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="@string/no_compression"
+                    android:checked="true"/>
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTarLzma"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="tar.lzma"/>
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTarBz2"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="tar.bz2"/>
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTarXz"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="tar.xz"/>
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTarGz"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="tar.gz"/>
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipTarZstd"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:chipCornerRadius="8dp"
-                android:text="tar.zst"/>
-        </com.google.android.material.chip.ChipGroup>
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/okButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cornerRadius="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="16dp"
-            style="@style/Widget.Material3.Button.TonalButton"
-            android:text="@string/ok" />
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTarLzma"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="tar.lzma"/>
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTarXz"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="tar.xz"/>
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipTarZstd"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipCornerRadius="8dp"
+                    android:text="tar.zst"/>
+            </com.google.android.material.chip.ChipGroup>
+        </LinearLayout>
+    </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/buttonContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancelButton"
-            android:layout_width="match_parent"
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cornerRadius="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_alignParentStart="true"
+            app:icon="@drawable/ic_round_cancel"
+            app:cornerRadius="10dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/okButton"
             style="@style/Widget.Material3.Button.TonalButton"
-            android:text="@string/cancel" />
-    </LinearLayout>
-</ScrollView>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@id/cancelButton"
+            android:layout_alignParentEnd="true"
+            android:text="@string/ok"
+            app:cornerRadius="10dp"/>
+    </RelativeLayout>
+</RelativeLayout>
